// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tree icon and switcherIcon of Tree with showLine should render correctly 1`] = `
<div
  class="g-tree css-var-root g-tree-show-line"
>
  <div
    aria-hidden="true"
    class="g-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="g-tree-indent"
    >
      <div
        class="g-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="g-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="g-tree-list-holder"
    >
      <div>
        <div
          class="g-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            />
            <span
              class="g-tree-switcher g-tree-switcher_close"
            >
              switcherIcon
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-close"
              title="---"
            >
              <span
                class="g-tree-iconEle g-tree-icon__customize"
              >
                icon
              </span>
              <span
                class="g-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close"
            draggable="false"
            id="test-id-0-1"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            />
            <span
              class="g-tree-switcher g-tree-switcher_close"
            >
              switcherIcon
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-close"
              title="---"
            >
              <span
                class="g-tree-iconEle g-tree-icon__close"
              />
              <span
                class="g-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            />
            <span
              class="g-tree-switcher g-tree-switcher_close"
            >
              <span
                aria-label="plus-square"
                class="gicon gicon-plus-square g-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus-square"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                  />
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-close"
              title="---"
            >
              <span
                class="g-tree-iconEle g-tree-icon__close"
              />
              <span
                class="g-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree showLine is object type should render correctly 1`] = `
<div
  class="g-tree g-tree-icon-hide css-var-root g-tree-show-line"
>
  <div
    aria-hidden="true"
    class="g-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="g-tree-indent"
    >
      <div
        class="g-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="g-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="g-tree-list-holder"
    >
      <div>
        <div
          class="g-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-open g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            />
            <span
              class="g-tree-switcher g-tree-switcher_open"
            >
              <span
                aria-label="minus-square"
                class="gicon gicon-minus-square g-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="minus-square"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                  />
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="g-tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-open"
            draggable="false"
            id="test-id-0-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher_open"
            >
              <span
                aria-label="minus-square"
                class="gicon gicon-minus-square g-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="minus-square"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                  />
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-open"
              title="parent 1-0"
            >
              <span
                class="g-tree-title"
              >
                parent 1-0
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf"
            draggable="false"
            id="test-id-0-0-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher-noop"
            >
              <span
                class="g-tree-switcher-leaf-line"
              />
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="g-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf"
            draggable="false"
            id="test-id-0-0-0-1"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher-noop"
            >
              <span
                class="g-tree-switcher-leaf-line"
              />
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="g-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf-last g-tree-treenode-leaf"
            draggable="false"
            id="test-id-0-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher-noop"
            >
              <span
                class="g-tree-switcher-leaf-line"
              />
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="g-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close"
            draggable="false"
            id="test-id-0-0-1"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher_close"
            >
              <span
                aria-label="plus-square"
                class="gicon gicon-plus-square g-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus-square"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                  />
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-close"
              title="parent 1-1"
            >
              <span
                class="g-tree-title"
              >
                parent 1-1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher_close"
            >
              <span
                aria-label="plus-square"
                class="gicon gicon-plus-square g-tree-switcher-line-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="plus-square"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
                  />
                  <path
                    d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-close"
              title="parent 1-2"
            >
              <span
                class="g-tree-title"
              >
                parent 1-2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree support switcherLoadingIcon prop when loadData 1`] = `
<div
  class="g-tree g-tree-icon-hide css-var-root"
>
  <div
    aria-hidden="true"
    class="g-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="g-tree-indent"
    >
      <div
        class="g-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="g-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="g-tree-list-holder"
    >
      <div>
        <div
          class="g-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-open g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            />
            <span
              class="g-tree-switcher g-tree-switcher_open"
            >
              switcherIcon
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="g-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-open g-tree-treenode-loading"
            draggable="false"
            id="test-id-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher_open"
            >
              <div>
                loading...
              </div>
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-open"
              title="node1"
            >
              <span
                class="g-tree-iconEle g-tree-icon__open g-tree-icon_loading"
              />
              <span
                class="g-tree-title"
              >
                node1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-open g-tree-treenode-loading g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0-3"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher_open"
            >
              <div>
                loading...
              </div>
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-open"
              title="node2"
            >
              <span
                class="g-tree-iconEle g-tree-icon__open g-tree-icon_loading"
              />
              <span
                class="g-tree-title"
              >
                node2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree switcherIcon in Tree could be string 1`] = `
<div
  class="g-tree g-tree-icon-hide css-var-root"
>
  <div
    aria-hidden="true"
    class="g-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="g-tree-indent"
    >
      <div
        class="g-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="g-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="g-tree-list-holder"
    >
      <div>
        <div
          class="g-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-open g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            />
            <span
              class="g-tree-switcher g-tree-switcher_open"
            >
              switcherIcon
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="g-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf"
            draggable="false"
            id="test-id-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher-noop"
            />
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-normal"
              title="node1"
            >
              <span
                class="g-tree-title"
              >
                node1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf-last g-tree-treenode-leaf"
            draggable="false"
            id="test-id-0-0-3"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher-noop"
            />
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-normal"
              title="node2"
            >
              <span
                class="g-tree-title"
              >
                node2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree switcherIcon should be loading icon when loadData 1`] = `
<div
  class="g-tree g-tree-icon-hide css-var-root"
>
  <div
    aria-hidden="true"
    class="g-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden; border: 0px; padding: 0px;"
  >
    <div
      class="g-tree-indent"
    >
      <div
        class="g-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="g-tree-list"
    role="tree"
    style="position: relative;"
    tabindex="0"
  >
    <div
      class="g-tree-list-holder"
    >
      <div>
        <div
          class="g-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-open g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            />
            <span
              class="g-tree-switcher g-tree-switcher_open"
            >
              switcherIcon
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="g-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close"
            draggable="false"
            id="test-id-0-0-2"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher_close"
            >
              switcherIcon
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-close"
              title="node1"
            >
              <span
                class="g-tree-title"
              >
                node1
              </span>
            </span>
          </div>
          <div
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="g-tree-treenode g-tree-treenode-switcher-close g-tree-treenode-leaf-last"
            draggable="false"
            id="test-id-0-0-3"
            role="treeitem"
          >
            <span
              aria-hidden="true"
              class="g-tree-indent"
            >
              <span
                class="g-tree-indent-unit g-tree-indent-unit-start g-tree-indent-unit-end"
              />
            </span>
            <span
              class="g-tree-switcher g-tree-switcher_close"
            >
              switcherIcon
            </span>
            <span
              class="g-tree-node-content-wrapper g-tree-node-content-wrapper-close"
              title="node2"
            >
              <span
                class="g-tree-title"
              >
                node2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
